# YOLOv10-OpenVINO-CPP-Inference

./: .gitignore  Dockerfile  LICENSE  README.md
notebooks/: YOLOv10_exporter.ipynb
src/: CMakeLists.txt  inference.cc  inference.h  main_camera.cc  main_detect.cc  main_video.cc  utils.cc  utils.h
yolo/: CMakeLists.txt  inference.cc  inference.h  main.cc
